force-app/main/default/objects/Customer_Sales_Management_Archive__c/Customer_Sales_Management_Archive__c.object-meta.xml
<CustomObject>
    <label>Customer Sales Management Archive</label>
    <nameField>
        <displayFormat>CSMA-{0000000}</displayFormat>
        <label>CSMA Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sales Management Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>