force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/CSM_Record_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>CSM_Record_Created_Time__c</fullName>
    <label>CSM Record Created Time</label>
    <type>DateTime</type>
</CustomField>