force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/Customer_SoldTo_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_SoldTo_Number__c</fullName>
    <label>Customer SoldTo Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>