force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/Online_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Online_Deal_Count__c</fullName>
    <label>Online Deal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>