force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>