force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <label>Plant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>