force-app/main/default/objects/Customer_Sales_Management_Archive__c/fields/Sales_TON__c.field-meta.xml
<CustomField>
    <fullName>Sales_TON__c</fullName>
    <label>Sales(TON)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>