force-app/main/default/objects/Customer_Sales_Management_Archive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CSM_Record_Created_Time__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_SoldTo_Number__c</columns>
    <columns>Online_Deal_Count__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Sales_CBM__c</columns>
    <columns>Sales_TON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>